--- a/IdentityServer_FrontEnd/Views/Auth/Register.cshtml
+++ b/IdentityServer_FrontEnd/Views/Auth/Register.cshtml
@@ -8,17 +8,17 @@
     <div class="block">
         <label>Username</label>
         <input asp-for="UserName" class="input" />
-        <span asp-validator-for="UserName"></span>
+        @*<span asp-validator-for="UserName"></span>*@
     </div>
     <div class="block">
         <label>Password</label>
         <input asp-for="Password" class="input" />
-        <span asp-validator-for="Password"></span>
+        @*<span asp-validator-for="Password"></span>*@
     </div>
     <div class="block">
         <label>Confirm password</label>
         <input asp-for="ConfirmPassword" class="input" />
-        <span asp-validator-for="ConfirmPassword"></span>
+        @*<span asp-validator-for="ConfirmPassword"></span>*@
     </div>
     <div class="block">
         <button type="submit" class="button">
