--- a/IdentityServer_FrontEnd/Views/_ViewImports.cshtml
+++ b/IdentityServer_FrontEnd/Views/_ViewImports.cshtml
@@ -1,2 +1,2 @@
-﻿@using IdentityServer_DAL.Entity.Auth
+﻿@using IdentityServer_DAL.Entity.ViewModel.Auth
 @addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelpers"
