--- a/IdentityServer_FrontEnd/Styles/app.css
+++ b/IdentityServer_FrontEnd/Styles/app.css
@@ -28,7 +28,8 @@
     margin-top: 10px;
 }
 
-.switch-button {
+.switch-button 
+{
     margin-top: 8px; 
     font-size: 8px;
     border-radius: 4px;
@@ -37,4 +38,12 @@
     display: inline-block;
     text-align: center;
     width: 100%; 
+}
+
+.output 
+{
+    font-size: 30px;
+    font-family: Arial;
+    color: #332600;
+    text-align: center;
 }
