--- a/IdentityServer_FrontEnd/Views/Pages/MainPage.cshtml
+++ b/IdentityServer_FrontEnd/Views/Pages/MainPage.cshtml
@@ -1,13 +1,15 @@
-﻿@model LoginViewModel
+﻿@using IdentityServer_FrontEnd.ViewModels;
+
+@model MainPageViewModel
+
 <head>
     <link href=@Url.Content("~/styles/app.css") rel="stylesheet" type="text/css" />
 </head>
 <form asp-controller="Pages" asp-action="MainPage" metod="get">
-    <input type="hidden" asp-for="ReturnUrl" />
-    <div class="heared">User Name: @Model.UserName</div>
+    <div class="heared">Hello @Model.UserName</div>
     <div class="block">
         <button type="submit" class="button">
-            <a asp-controller="Auth" asp-action="LogOut"> @*asp-route-returnUrl="@Model.ReturnUrl">*@
+            <a asp-controller="Auth" asp-action="LogOut" asp-route-logOutId="@Model.UserName">
                 Log Out
             </a>
         </button>
