--- a/IdentityServer_FrontEnd/Views/Auth/Register.cshtml
+++ b/IdentityServer_FrontEnd/Views/Auth/Register.cshtml
@@ -5,60 +5,71 @@
 }
 
 <head>
-    <link href=@Url.Content("~/styles/app.css") rel="stylesheet" type="text/css" />
+    <link href= @Url.Content("~/styles/app.css") rel="stylesheet" type="text/css" />
+    <link href=@Url.Content("~/styles/animation.css") rel="stylesheet" type="text/css" />
+    <link href=@Url.Content("~/styles/button.css") rel="stylesheet" type="text/css" />
 </head>
-<form asp-controller="Auth" asp-action="Register" metod="post">
-    <input type="hidden" asp-for="ReturnUrl" />
-    <div class="heared">Sign Up</div>
-    <div class="block">
-        @if (errorModel != null && errorModel.UserNameErrors != null)
-        {
-            foreach (var item in errorModel.UserNameErrors)
+<body class="body">
+    <form asp-controller="Auth" asp-action="Register" metod="post">
+        <input type="hidden" asp-for="ReturnUrl" />
+        <div class="heared">Sign Up</div>
+        <div class="block">
+            @if (errorModel != null && errorModel.UserNameErrors != null)
             {
-                <div>
-                    <label>
-                        @item.ErrorMessage
-                    </label>
-                </div>
+                foreach (var item in errorModel.UserNameErrors)
+                {
+                    <div>
+                        <label>
+                            @item.ErrorMessage
+                        </label>
+                    </div>
+                }
             }
-        }
-        <label>Username</label>
-        <input asp-for="UserName" class="input" />
-    </div>
-    <div class="block">
-        @if (errorModel != null && errorModel.PasswordErrors != null)
-        {
-            foreach (var item in errorModel.PasswordErrors)
+            <label class="main_pages_text">Username</label>
+            <input asp-for="UserName" class="input" />
+        </div>
+        <div class="block">
+            @if (errorModel != null && errorModel.PasswordErrors != null)
             {
-                        <div>
-                            <label>
-                                @item.ErrorMessage
-                            </label>
-                        </div>
+                foreach (var item in errorModel.PasswordErrors)
+                {
+                    <div>
+                        <label>
+                            @item.ErrorMessage
+                        </label>
+                    </div>
+                }
             }
-        }
-        <label>Password</label>
-        <input asp-for="Password" class="input" />
-    </div>
-    <div class="block">
-        @if (errorModel != null && errorModel.ConfirmPasswordErrors != null)
-        {
-            foreach (var item in errorModel.ConfirmPasswordErrors)
+            <label class="main_pages_text">Password</label>
+            <input asp-for="Password" class="input" />
+        </div>
+        <div class="block">
+            @if (errorModel != null && errorModel.ConfirmPasswordErrors != null)
             {
-                <div>
-                    <label>
-                        @item.ErrorMessage
-                    </label>
-                </div>
+                foreach (var item in errorModel.ConfirmPasswordErrors)
+                {
+                    <div>
+                        <label>
+                            @item.ErrorMessage
+                        </label>
+                    </div>
+                }
             }
-        }
-        <label>Confirm password</label>
-        <input asp-for="ConfirmPassword" class="input" />
-    </div>
-    <div class="block">
-        <button type="submit" class="button">
-            Sign up
-        </button>
-    </div>
-    <a asp-controller="Auth" asp-action="Login" asp-route-returnUrl="@Model.ReturnUrl" class="switch-button">Login</a>
-</form>
+            <label class="main_pages_text">Confirm password</label>
+            <input asp-for="ConfirmPassword" class="input" />
+        </div>
+        <div class="block">
+            <button type="submit" class="button">
+                Sign up
+            </button>
+        </div>
+    </form>
+</body>
+<footer>
+    <form>
+        <div class="block">
+            <a asp-controller="Auth" asp-action="Login" asp-route-returnUrl="@Model.ReturnUrl" class="switch-button">Login</a>
+        </div>
+    </form>
+</footer>
+
