--- a/IdentityServer_FrontEnd/Views/Auth/Login.cshtml
+++ b/IdentityServer_FrontEnd/Views/Auth/Login.cshtml
@@ -21,7 +21,7 @@
                 foreach (var item in errorModel.UserNameErrors)
                 {
                     <div>
-                        <label>
+                        <label class="main_pages_text">
                             @item.ErrorMessage
                         </label>
                     </div>
@@ -37,7 +37,7 @@
                 foreach (var item in errorModel.PasswordErrors)
                 {
                     <div>
-                        <label>
+                        <label class="main_pages_text">
                             @item.ErrorMessage
                         </label>
                     </div>
