--- a/IdentityServer_FrontEnd/Views/_ViewImports.cshtml
+++ b/IdentityServer_FrontEnd/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using IdentityServer_DAL.Entity.ViewModel.Auth
+﻿@using IdentityServer_DAL.Entity.ViewModel.Auth;
 
 @addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelpers"
