Repare taking style from frontEnd

--- a/IdentityServer_FrontEnd/Views/Pages/MainPage.cshtml
+++ b/IdentityServer_FrontEnd/Views/Pages/MainPage.cshtml
@@ -3,9 +3,9 @@
 @model MainPageViewModel
 
 <head>
-    <link href=@Url.Content("~/styles/app.css") rel="stylesheet" type="text/css" />
-    <link href=@Url.Content("~/styles/animation.css") rel="stylesheet" type="text/css" />
-    <link href=@Url.Content("~/styles/button.css") rel="stylesheet" type="text/css" />
+    <link href=@Url.Content("~/Styles/app.css") rel="stylesheet" type="text/css" />
+    <link href=@Url.Content("~/Styles/animation.css") rel="stylesheet" type="text/css" />
+    <link href=@Url.Content("~/Styles/button.css") rel="stylesheet" type="text/css" />
 </head>
 <body class="body">
     <div class="heared">
