--- a/IdentityServer_FrontEnd/Views/Auth/Login.cshtml
+++ b/IdentityServer_FrontEnd/Views/Auth/Login.cshtml
@@ -5,9 +5,9 @@
 }
 
 <head>
-    <link href=@Url.Content("~/styles/app.css") rel="stylesheet" type="text/css" /><!-- Це те звідки буде братись стилістика цієї сторінки-->
-    <link href=@Url.Content("~/styles/animation.css") rel="stylesheet" type="text/css" />
-    <link href=@Url.Content("~/styles/button.css") rel="stylesheet" type="text/css" />
+    <link href=@Url.Content("~/Styles/app.css") rel="stylesheet" type="text/css" /><!-- Це те звідки буде братись стилістика цієї сторінки-->
+    <link href=@Url.Content("~/Styles/animation.css") rel="stylesheet" type="text/css" />
+    <link href=@Url.Content("~/Styles/button.css") rel="stylesheet" type="text/css" />
 </head>
 <body class="body">
     <form asp-controller="Auth" asp-action="Login" metod="post">
