--- a/IdentityServer_FrontEnd/Views/Pages/MainPage.cshtml
+++ b/IdentityServer_FrontEnd/Views/Pages/MainPage.cshtml
@@ -15,6 +15,13 @@
     </div>
 </body>
 <footer>
+    <div class="block">
+        <a asp-controller="Pages" asp-action="TakeAcces" metod="get" asp-route-accesIs="@true">
+                <button type="submit" class="button">
+                    Ok
+                </button>
+            </a>
+    </div>
     <div class="output_block">
         <a asp-controller="Auth" asp-action="LogOut" asp-route-logOutId="@Model.UserName">
                 <button type="submit" class="button">
