--- a/IdentityServer_FrontEnd/Views/Auth/Login.cshtml
+++ b/IdentityServer_FrontEnd/Views/Auth/Login.cshtml
@@ -58,7 +58,41 @@
 <footer>
     <form>
         <div class="block">
-            <a asp-controller="Auth" asp-action="Register" asp-route-returnUrl="@Model.ReturnUrl" class="switch-button">Register</a><!--Циклічність перемикання тексту на кнопці -->
+            <a asp-controller="Auth" asp-action="Register" asp-route-returnUrl="@Model.ReturnUrl" class="switch-button">
+                Register
+            </a>
+            <a asp-controller="MenegmentDataBase" asp-action="DeleteAllUsers" asp-route-returnActionName="Login" asp-route-returnControllerName="Auth" class="switch-button">
+                Delete All Users
+                @if (errorModel!= null && errorModel.DelateAllUsersDone)
+                {
+                    <label style="color: red">
+                        Delete All Users
+                    </label>
+                }
+
+                @if (errorModel!= null && !errorModel.DelateAllUsersDone)
+                {
+                    <label style="color: green">
+                            Delete All Users
+                    </label> 
+                }  
+            </a>
+            <a asp-controller="MenegmentDataBase" asp-action="CreateBaseUsers" asp-route-returnActionName="Login" asp-route-returnControllerName="Auth" class="switch-button">
+                Create Base Users
+                @if (errorModel != null && errorModel.DelateAllUsersDone)
+                {
+                    <label style="color: red">
+                        Create Base Users
+                    </label>
+                }
+
+                @if (errorModel != null && !errorModel.DelateAllUsersDone)
+                {
+                    <label style="color: green">
+                        Create Base Users
+                    </label>
+                }
+            </a>
         </div>
     </form>
 </footer>
